change icons, add new assets and fix bugs

--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
         <meta charset="UTF-8">
         <title>Rain for relax</title>
         <link rel="stylesheet" href="main.css">
-        <link rel="icon" href="assets/images/logo.ico" type="image/x-icon">
+        <link rel="icon" href="assets/images/cloud.png" type="image/x-icon">
     </head>
     <body>
         <video id="background-video" autoplay loop muted>
-        <source src="assets/background.mp4" type="video/mp4">
+        <source src="assets/chill-rain.mp4" type="video/mp4">
         </video>
         <center>
         <div class="centered">
-            <img id="logo" width="25%" src="assets/images/logo.png">~!
-            <h1>Just enjoy the <a href="https://en.wikipedia.org/wiki/Rain" target="_blank">rain</a> !</h1>
+            <img id="logo" width="25%" src="assets/images/cloud.png">
+            <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
             <audio autoplay loop><source src="assets/rain.mp3" type="audio/mpeg">Votre navigateur n'est pas comptible.</audio>
-            <h2>Created by <a href="#">Luckyluka17</a></h2>
             <h3>Pas de son/no sound ? <a href="javascript:history.go(0)">Cliquez ici</a> !</h3>
             <div>
-                <a href="https://github.com/Luckyluka17" target="_blank"><img width="5%" src="assets/images/github.png" title="Mon github"></a>
+                <a href="https://github.com/isyuricunha" target="_blank"><img width="5%" src="assets/images/github.png" title="Mon github"></a>
                 <a href="https://discord.gg/YPm459VZsH" target="_blank"><img width="5%" src="assets/images/discord.png" title="Mon serveur Discord"></a>
-                <a href="mailto:luckylukadu17@programmer.net" target="_blank"><img width="5%" src="assets/images/mail.png" title="Mon adresse mail"></a>
+                <a href="mailto:isyuricunha@duck.com" target="_blank"><img width="5%" src="assets/images/mail.png" title="Mon adresse mail"></a>
             </div>
         </div>
         </center>
