update the desc to startö

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img id="logo" width="25%" src="assets/images/cloud.png">
             <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
             <audio autoplay loop><source src="assets/rain-chill.mp3" type="audio/mpeg">Votre navigateur n'est pas comptible.</audio>
-            <h3>Pas de son/no sound ? <a href="javascript:history.go(0)">Cliquez ici</a> !</h3>
+            <h3>And, <a href="javascript:history.go(0)">click here to begin.</a></h3>
             <div>
                 <a href="https://github.com/isyuricunha" target="_blank"><img width="5%" src="assets/images/github.png" title="Mon github"></a>
                 <a href="https://discord.gg/YPm459VZsH" target="_blank"><img width="5%" src="assets/images/discord.png" title="Mon serveur Discord"></a>
