--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <audio autoplay loop><source src="assets/rain-chill.mp3" type="audio/mpeg">Votre navigateur n'est pas comptible.</audio>
             <h2>And, <a href="javascript:history.go(0)">click here to begin.</a></h2>
             <div>
-                <a href="https://github.com/isyuricunha" target="_blank"><img width="5%" src="assets/images/github.png" title="Mon github"></a>
-                <a href="https://discord.gg/YPm459VZsH" target="_blank"><img width="5%" src="assets/images/discord.png" title="Mon serveur Discord"></a>
-                <a href="mailto:isyuricunha@duck.com" target="_blank"><img width="5%" src="assets/images/mail.png" title="Mon adresse mail"></a>
+                <a href="https://github.com/isyuricunha" target="_blank"><img width="5%" src="assets/images/github.png" title="GitHub"></a>
+                <a href="https://discordapp.com/users/1018988240151253002" target="_blank"><img width="5%" src="assets/images/discord.png" title="Discord></a>
+                <a href="mailto:isyuricunha@duck.com" target="_blank"><img width="5%" src="assets/images/mail.png" title="E-mail"></a>
             </div>
         </div>
         </center>
