--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en-us">
     <head>
         <meta charset="UTF-8">
         <title>Rain for relax</title>
