--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img id="logo" width="25%" src="assets/images/cloud.png">
             <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
                 <audio controls autoplay>
-                <source src="rain-chill.mp3" type="audio/mpeg">
+                <source src="rain-chill.mp3">
                     Your browser does not support the audio element.
                 </audio>
             <h2>And, <a href="javascript:history.go(0)">click here to begin.</a></h2>
