--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
         <div class="centered">
             <img id="logo" width="25%" src="assets/images/cloud.png">
             <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
-                <audio controls autoplay>
-                <source src="rain-chill.mp3">
-                    Your browser does not support the audio element.
-                </audio>
+            <audio autoplay loop><source src="assets/rain-chill.mp3" type="audio/mpeg">Votre navigateur n'est pas comptible.</audio>
             <h2>And, <a href="javascript:history.go(0)">click here to begin.</a></h2>
             <div>
                 <a href="https://github.com/isyuricunha" target="_blank"><img width="5%" src="assets/images/github.png" title="GitHub"></a>
