--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="centered">
             <img id="logo" width="25%" src="assets/images/cloud.png">
             <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
-                <audio controls autoplay>
+                <audio autoplay="true">
                 <source src="assets/rain-chill.mp3">
                     Your browser does not support the audio element.
                 </audio>
