try to broke site

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="icon" href="assets/images/cloud.png" type="image/x-icon">
     </head>
     <body>
-        <video id="background-video" autoplay loop muted>
-        <source src="assets/chill-rain.mp4" type="video/mp4">
-        </video>
+        <!-- <video id="background-video" autoplay loop muted> -->
+        <!-- <source src="assets/chill-rain.mp4" type="video/mp4">
+        </video> -->
         <center>
         <div class="centered">
             <img id="logo" width="25%" src="assets/images/cloud.png">
