--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <link rel="icon" href="assets/images/cloud.png" type="image/x-icon">
     </head>
     <body>
-        <video id="background-video" autoplay loop muted>
+        <video id="background-video" autoplay loop>
         <source src="assets/chill-rain.mp4" type="video/mp4">
         </video>
         <center>
         <div class="centered">
             <img id="logo" width="25%" src="assets/images/cloud.png">
             <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
-                <audio autoplay preload="auto">
-                <source src="assets/rain-chill.mp3" autoplay>
+                <audio autoplay loop preload="auto">
+                <source src="assets/rain-chill.mp3" autoplay loop>
                     Your browser does not support the audio element.
                 </audio>
             <h2>And, <a href="javascript:history.go(0)">click here to begin.</a></h2>
