--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="assets/images/cloud.png" type="image/x-icon">
     </head>
     <body>
-        <video id="background-video" autoplay loop>
+        <video id="background-video" autoPlay loop muted>
         <source src="assets/chill-rain.mp4" type="video/mp4">
         </video>
         <center>
@@ -15,7 +15,7 @@
             <img id="logo" width="25%" src="assets/images/cloud.png">
             <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
                 <audio autoplay loop preload="auto">
-                <source src="assets/rain-chill.mp3" autoplay loop>
+                <source src="assets/rain-chill.mp3" autoPlay loop>
                     Your browser does not support the audio element.
                 </audio>
             <h2>And, <a href="javascript:history.go(0)">click here to begin.</a></h2>
