--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         <div class="centered">
             <img id="logo" width="25%" src="assets/images/cloud.png">
             <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
-                <audio autoplay loop preload="auto">
-                <source src="assets/rain-chill.mp3" autoPlay loop>
-                    Your browser does not support the audio element.
+                <audio autoplay loop>
+                <source src="assets/rain-chill.mp3">
                 </audio>
             <h2>And, <a href="javascript:history.go(0)">click here to begin.</a></h2>
             <div>
