--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>And, <a href="javascript:history.go(0)">click here to begin.</a></h2>
             <div>
                 <a href="https://github.com/isyuricunha" target="_blank"><img width="5%" src="assets/images/github.png" title="GitHub"></a>
-                <a href="https://discordapp.com/users/1018988240151253002" target="_blank"><img width="5%" src="assets/images/discord.png" title="Discord></a>
+                <a href="https://discordapp.com/users/1018988240151253002" target="_blank"><img width="5%" src="assets/images/discord.png" title="Discord"></a>
                 <a href="mailto:isyuricunha@duck.com" target="_blank"><img width="5%" src="assets/images/mail.png" title="E-mail"></a>
             </div>
         </div>
