--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="https://github.com/isyuricunha" target="_blank"><img width="5%" src="assets/images/github.png" title="GitHub"></a>
                 <a href="https://discordapp.com/users/1018988240151253002" target="_blank"><img width="5%" src="assets/images/discord.png" title="Discord"></a>
                 <a href="mailto:isyuricunha@duck.com" target="_blank"><img width="5%" src="assets/images/mail.png" title="E-mail"></a>
+                <a href="https://t.me/isyuricunha" target="_blank"><img width="5%" src="assets/images/telegram.png" title="Telegram"></a>
             </div>
         </div>
         </center>
