add new icons and links

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <a href="https://discordapp.com/users/1018988240151253002" target="_blank"><img width="5%" src="assets/images/discord.png" title="Discord"></a>
                 <a href="mailto:isyuricunha@duck.com" target="_blank"><img width="5%" src="assets/images/mail.png" title="E-mail"></a>
                 <a href="https://t.me/isyuricunha" target="_blank"><img width="5%" src="assets/images/telegram.png" title="Telegram"></a>
+                <a href="https://www.yuricunha.xyz/" target="_blank"><img width="5%" src="assets/images/website.png" title="Website"></a>
+                <a href="https://www.linkedin.com/in/isyuricunha/" target="_blank"><img width="5%" src="assets/images/linkedin.png" title="LinkedIn"></a>
             </div>
         </div>
         </center>
