errors, formatting, and style

--- a/index.html
+++ b/index.html
@@ -2,44 +2,59 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
-    <title>Rain for relax</title> <!-- Title -->
-    <link rel="stylesheet" href="main.css" /> <!-- CSS -->
-    <link rel="icon" href="assets/images/cloud.png" type="image/x-icon" /> <!-- Icon -->
+    <title>Rain for relax</title>
+    <link rel="stylesheet" href="main.css" />
+    <link rel="icon" href="assets/images/cloud.png" type="image/x-icon" />
   </head>
   <body>
-    <video id="background-video" autoplay loop muted> <!-- Video -->
-      <source src="assets/chill-rain.mp4" type="video/mp4" /> <!-- Video -->
+    <video id="background-video" autoplay loop muted>
+      <source src="assets/chill-rain.mp4" type="video/mp4" />
     </video>
     <center>
       <div class="centered">
-        <img id="logo" width="25%" src="assets/images/cloud.png" /> <!-- Logo -->
-        <h1>Just appreciate.<a> Relax.</a> Be well.</h1> <!-- Text -->
+        <img id="logo" style="width: 25%" src="assets/images/cloud.png" />
+        <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
         <audio autoplay loop>
           <source src="assets/rain-chill.mp3" />
         </audio>
         <h2>
-          And, <a href="javascript:history.go(0)">click here to begin.</a> <!-- Refresh -->
+          And, <a href="javascript:history.go(0)">click here to begin.</a>
         </h2>
-        <div> <!-- Social media -->
+        <div>
           <a href="https://github.com/isyuricunha" target="_blank"
-            ><img width="5%" src="assets/images/github.png" title="GitHub"
+            ><img
+              style="width: 5%"
+              src="assets/images/github.png"
+              title="GitHub"
           /></a>
           <a
             href="https://discordapp.com/users/1018988240151253002"
             target="_blank"
-            ><img width="5%" src="assets/images/discord.png" title="Discord"
+            ><img
+              style="width: 5%"
+              src="assets/images/discord.png"
+              title="Discord"
           /></a>
           <a href="mailto:isyuricunha@duck.com" target="_blank"
-            ><img width="5%" src="assets/images/mail.png" title="E-mail"
+            ><img style="width: 5%" src="assets/images/mail.png" title="E-mail"
           /></a>
           <a href="https://t.me/isyuricunha" target="_blank"
-            ><img width="5%" src="assets/images/telegram.png" title="Telegram"
+            ><img
+              style="width: 5%"
+              src="assets/images/telegram.png"
+              title="Telegram"
           /></a>
           <a href="https://www.yuricunha.xyz/" target="_blank"
-            ><img width="5%" src="assets/images/website.png" title="Website"
+            ><img
+              style="width: 5%"
+              src="assets/images/website.png"
+              title="Website"
           /></a>
           <a href="https://www.linkedin.com/in/isyuricunha/" target="_blank"
-            ><img width="5%" src="assets/images/linkedin.png" title="LinkedIn"
+            ><img
+              style="width: 5%"
+              src="assets/images/linkedin.png"
+              title="LinkedIn"
           /></a>
         </div>
       </div>
