--- a/index.html
+++ b/index.html
@@ -12,50 +12,71 @@
     </video>
     <center>
       <div class="centered">
-        <img id="logo" style="width: 25%" src="assets/images/cloud.png" />
-        <h1>Just appreciate.<a> Relax.</a> Be well.</h1>
+        <img
+          id="logo"
+          style="width: 25%"
+          src="assets/images/cloud.png"
+          alt="Logo"
+        />
+        <h1>Just appreciate. <a>Relax.</a> Be well.</h1>
         <audio autoplay loop>
           <source src="assets/rain-chill.mp3" />
         </audio>
         <h2>
-          And, <a href="javascript:history.go(0)">click here to begin.</a>
+          And, <a href="javascript:history.go(0)">click here to begin.</a> 🌧️
         </h2>
         <div>
-          <a href="https://github.com/isyuricunha" target="_blank"
-            ><img
+          <a href="https://github.com/isyuricunha" target="_blank">
+            <img
               style="width: 5%"
               src="assets/images/github.png"
+              alt="GitHub"
               title="GitHub"
-          /></a>
+            />
+          </a>
           <a
             href="https://discordapp.com/users/1018988240151253002"
             target="_blank"
-            ><img
+          >
+            <img
               style="width: 5%"
               src="assets/images/discord.png"
+              alt="Discord"
               title="Discord"
-          /></a>
-          <a href="mailto:isyuricunha@duck.com" target="_blank"
-            ><img style="width: 5%" src="assets/images/mail.png" title="E-mail"
-          /></a>
-          <a href="https://t.me/isyuricunha" target="_blank"
-            ><img
+            />
+          </a>
+          <a href="mailto:isyuricunha@duck.com" target="_blank">
+            <img
+              style="width: 5%"
+              src="assets/images/mail.png"
+              alt="E-mail"
+              title="E-mail"
+            />
+          </a>
+          <a href="https://t.me/isyuricunha" target="_blank">
+            <img
               style="width: 5%"
               src="assets/images/telegram.png"
+              alt="Telegram"
               title="Telegram"
-          /></a>
-          <a href="https://www.yuricunha.xyz/" target="_blank"
-            ><img
+            />
+          </a>
+          <a href="https://www.yuricunha.xyz/" target="_blank">
+            <img
               style="width: 5%"
               src="assets/images/website.png"
+              alt="Website"
               title="Website"
-          /></a>
-          <a href="https://www.linkedin.com/in/isyuricunha/" target="_blank"
-            ><img
+            />
+          </a>
+          <a href="https://www.linkedin.com/in/isyuricunha/" target="_blank">
+            <img
               style="width: 5%"
               src="assets/images/linkedin.png"
+              alt="LinkedIn"
               title="LinkedIn"
-          /></a>
+            />
+          </a>
         </div>
       </div>
     </center>
