change yuricunha.xyz to yuricunha.com

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               title="Telegram"
             />
           </a>
-          <a href="https://www.yuricunha.xyz/" target="_blank">
+          <a href="https://www.yuricunha.com/" target="_blank">
             <img
               style="width: 5%"
               src="assets/images/website.png"
