--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               title="Discord"
             />
           </a>
-          <a href="mailto:isyuricunha@duck.com" target="_blank">
+          <a href="mailto:me@yuricunha.com" target="_blank">
             <img
               style="width: 5%"
               src="assets/images/mail.png"
