--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <title>Rain for relax</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" href="assets/images/cloud.png" type="image/x-icon" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-YMBMJST8GR"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-YMBMJST8GR");
+    </script>
   </head>
   <body>
     <video id="background-video" autoplay loop muted>
