prevent right click

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
       gtag("config", "G-YMBMJST8GR");
     </script>
+
+    <script>
+      document.addEventListener("contextmenu", function (event) {
+        event.preventDefault();
+      });
+    </script>
   </head>
   <body>
     <video id="background-video" autoplay loop muted>
