Revert "prevent right click"
This reverts commit 82e5cf91b4cc7a81b5f31d8512c8a9301eafba5f.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-YMBMJST8GR"
     ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-YMBMJST8GR");
-    </script>
 
     <script>
       document.addEventListener("contextmenu", function (event) {
@@ -40,6 +31,7 @@
         writable: false,
       });
     </script>
+    ======= >>>>>>> parent of 82e5cf9 (prevent right click)
   </head>
   <body>
     <video id="background-video" autoplay loop muted>
