--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Rain for relax</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" href="assets/images/cloud.png" type="image/x-icon" />
+    <link rel="canonical" href="https://www.rain-for-relax.yuricunha.com/" />
+
     <!-- Google tag (gtag.js) -->
     <script
       async
