Update meta tags and prevent console opening

--- a/index.html
+++ b/index.html
@@ -1,112 +1,116 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Rain for relax</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="icon" href="assets/images/cloud.png" type="image/x-icon" />
-    <link rel="canonical" href="https://www.rain-for-relax.yuricunha.com/" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Rain music to relax" />
+		<meta name="keywords" content="rain, rain chill, yuri cunha" />
+		<meta name="author" content="Yuri Cunha" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Rain for relax</title>
+		<link rel="stylesheet" href="main.css" />
+		<link rel="icon" href="assets/images/cloud.png" type="image/x-icon" />
+		<link rel="canonical" href="https://www.rain-for-relax.yuricunha.com/" />
 
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-YMBMJST8GR"
-    ></script>
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-YMBMJST8GR"
+		></script>
 
-    <script>
-      document.addEventListener("contextmenu", function (event) {
-        event.preventDefault();
-      });
-    </script>
+		<script>
+			document.addEventListener("contextmenu", function (event) {
+				event.preventDefault();
+			});
+		</script>
 
-    <script>
-      // This code tries to prevent console from opening
-      Object.defineProperty(window, "console", {
-        value: {
-          log: function () {},
-          warn: function () {},
-          error: function () {},
-          debug: function () {},
-        },
-        configurable: false,
-        enumerable: false,
-        writable: false,
-      });
-    </script>
-  </head>
-  <body>
-    <video id="background-video" autoplay loop muted>
-      <source src="assets/chill-rain.mp4" type="video/mp4" />
-    </video>
-    <center>
-      <div class="centered">
-        <img
-          id="logo"
-          style="width: 25%"
-          src="assets/images/cloud.png"
-          alt="Logo"
-        />
-        <h1>Just appreciate. <a>Relax.</a> Be well.</h1>
-        <audio autoplay loop>
-          <source src="assets/rain-chill.mp3" />
-        </audio>
-        <h2>
-          And, <a href="javascript:history.go(0)">click here to begin.</a> 🌧️
-        </h2>
-        <div>
-          <a href="https://github.com/isyuricunha" target="_blank">
-            <img
-              style="width: 5%"
-              src="assets/images/github.png"
-              alt="GitHub"
-              title="GitHub"
-            />
-          </a>
-          <a
-            href="https://discordapp.com/users/1018988240151253002"
-            target="_blank"
-          >
-            <img
-              style="width: 5%"
-              src="assets/images/discord.png"
-              alt="Discord"
-              title="Discord"
-            />
-          </a>
-          <a href="mailto:me@yuricunha.com" target="_blank">
-            <img
-              style="width: 5%"
-              src="assets/images/mail.png"
-              alt="E-mail"
-              title="E-mail"
-            />
-          </a>
-          <a href="https://t.me/isyuricunha" target="_blank">
-            <img
-              style="width: 5%"
-              src="assets/images/telegram.png"
-              alt="Telegram"
-              title="Telegram"
-            />
-          </a>
-          <a href="https://www.yuricunha.com/" target="_blank">
-            <img
-              style="width: 5%"
-              src="assets/images/website.png"
-              alt="Website"
-              title="Website"
-            />
-          </a>
-          <a href="https://www.linkedin.com/in/isyuricunha/" target="_blank">
-            <img
-              style="width: 5%"
-              src="assets/images/linkedin.png"
-              alt="LinkedIn"
-              title="LinkedIn"
-            />
-          </a>
-        </div>
-      </div>
-    </center>
-  </body>
+		<script>
+			// This code tries to prevent console from opening
+			Object.defineProperty(window, "console", {
+				value: {
+					log: function () {},
+					warn: function () {},
+					error: function () {},
+					debug: function () {},
+				},
+				configurable: false,
+				enumerable: false,
+				writable: false,
+			});
+		</script>
+	</head>
+	<body>
+		<video id="background-video" autoplay loop muted>
+			<source src="assets/chill-rain.mp4" type="video/mp4" />
+		</video>
+		<center>
+			<div class="centered">
+				<img
+					id="logo"
+					style="width: 25%"
+					src="assets/images/cloud.png"
+					alt="Logo"
+				/>
+				<h1>Just appreciate. <a>Relax.</a> Be well.</h1>
+				<audio autoplay loop>
+					<source src="assets/rain-chill.mp3" />
+				</audio>
+				<h2>
+					And, <a href="javascript:history.go(0)">click here to begin.</a> 🌧️
+				</h2>
+				<div>
+					<a href="https://github.com/isyuricunha" target="_blank">
+						<img
+							style="width: 5%"
+							src="assets/images/github.png"
+							alt="GitHub"
+							title="GitHub"
+						/>
+					</a>
+					<a
+						href="https://discordapp.com/users/1018988240151253002"
+						target="_blank"
+					>
+						<img
+							style="width: 5%"
+							src="assets/images/discord.png"
+							alt="Discord"
+							title="Discord"
+						/>
+					</a>
+					<a href="mailto:me@yuricunha.com" target="_blank">
+						<img
+							style="width: 5%"
+							src="assets/images/mail.png"
+							alt="E-mail"
+							title="E-mail"
+						/>
+					</a>
+					<a href="https://t.me/isyuricunha" target="_blank">
+						<img
+							style="width: 5%"
+							src="assets/images/telegram.png"
+							alt="Telegram"
+							title="Telegram"
+						/>
+					</a>
+					<a href="https://www.yuricunha.com/" target="_blank">
+						<img
+							style="width: 5%"
+							src="assets/images/website.png"
+							alt="Website"
+							title="Website"
+						/>
+					</a>
+					<a href="https://www.linkedin.com/in/isyuricunha/" target="_blank">
+						<img
+							style="width: 5%"
+							src="assets/images/linkedin.png"
+							alt="LinkedIn"
+							title="LinkedIn"
+						/>
+					</a>
+				</div>
+			</div>
+		</center>
+	</body>
 </html>
