--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 				writable: false,
 			});
 		</script>
+
+		<script
+			defer
+			src="https://umami.yuricunha.com/script.js"
+			data-website-id="a44fe16d-82a3-4a29-8ef2-9d6b78ae7fa6"
+		></script>
 	</head>
 	<body>
 		<video id="background-video" autoplay loop muted>
