--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
 			});
 		</script>
 
-		<script
-			defer
-			src="https://umami.yuricunha.com/script.js"
-			data-website-id="a44fe16d-82a3-4a29-8ef2-9d6b78ae7fa6"
-		></script>
+<script defer src="https://umami.yuricunha.com/script.js" data-website-id="ae078a6c-02fb-45c2-96d3-3274da991093"></script>
 	</head>
 	<body>
 		<video id="background-video" autoplay loop muted>
