Update Umami analytics script and vercel.json formatting

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 			});
 		</script>
 
-<script defer src="https://umami.yuricunha.com/script.js" data-website-id="ae078a6c-02fb-45c2-96d3-3274da991093"></script>
+		<script
+			defer
+			src="https://umami.yuricunha.com/script.js"
+			data-website-id="ae078a6c-02fb-45c2-96d3-3274da991093"
+		></script>
 	</head>
 	<body>
 		<video id="background-video" autoplay loop muted>
